traces/bug_850.txt
examples++-load/iovtk.cpp:2729: error: DEAD_STORE
  The value written to &bbff (type Fem2D::Triangle3*) is never used.
Showing all 1 steps of the trace


examples++-load/iovtk.cpp:2729:5: Write of unused value
2727.   
2728.       Triangle3 *bff  = new Triangle3[nbe];
2729.       Triangle3 *bbff = bff;
            ^
2730.   
2731.       for(unsigned int i = 0; i < numElements; i++){
